--- a/index.html
+++ b/index.html
@@ -10,18 +10,26 @@
 
 </head>
 <body>
-
-  Day
-  DD
-
-  Month
-  MM
-
-  Year
-  YYYY
-
-  -- years
-  -- months
-  -- days
+  <main>
+    <article class="calculator">
+      <div class="calculator__info">
+        <form>
+          <label for="day">Day</label>
+          <input type="number" name="day" placeholder="DD">
+          <label for="month">Month</label>
+          <input type="number" name="month" placeholder="MM">
+          <label for="number">Year</label>
+          <input type="number" name="year" placeholder="YYYY">
+        </form>
+        <svg></svg>
+      </div>
+      <hr>
+      <div class="calculator__result">
+        <h3><span>-- </span> years</h3>
+        <h3><span>-- </span> months</h3>
+        <h3><span>-- </span> days</h3>
+      </div>
+    </article>
+  </main>
 </body>
 </html>
