--- a/index.html
+++ b/index.html
@@ -18,14 +18,20 @@
           <div class="form__day">
             <label for="day">D A Y</label>
             <input type="number" name="day" id="day" placeholder="DD" min="1">
+            <span class="field__error inactive">Must be a valid day</span>
+            <span class="field__error inactive">The file is required</span>
           </div>
           <div class="form__month">
             <label for="month">M O N T H</label>
             <input type="number" name="month" id="month" placeholder="MM" min="1" max="12">
+            <span class="field__error inactive">Must be a valid month</span>
+            <span class="field__error inactive">The file is required</span>
           </div>
           <div class="form__year">
             <label for="year">Y E A R</label>
             <input type="number" name="year" id="year" placeholder="YYYY">
+            <span class="field__error inactive">Must be a valid year</span>
+            <span class="field__error inactive">The file is required</span>
           </div>
           <button class="calculator__img" type="button">
             <svg class="img_svg"></svg>
