Error text animation

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
       <div class="calculator__info">
         <form class="info__form">
           <div class="form__day">
-            <label for="day">D A Y</label>
+            <label for="day" class="">D A Y</label>
             <input type="number" name="day" id="day" placeholder="DD" min="1">
             <span class="field__error inactive">Must be a valid day</span>
             <span class="field__error inactive">The file is required</span>
           </div>
           <div class="form__month">
-            <label for="month">M O N T H</label>
+            <label for="month" class="">M O N T H</label>
             <input type="number" name="month" id="month" placeholder="MM" min="1" max="12">
             <span class="field__error inactive">Must be a valid month</span>
             <span class="field__error inactive">The file is required</span>
           </div>
           <div class="form__year">
-            <label for="year">Y E A R</label>
+            <label for="year" class="">Y E A R</label>
             <input type="number" name="year" id="year" placeholder="YYYY">
             <span class="field__error inactive">Must be a valid year</span>
             <span class="field__error inactive">The file is required</span>
